fix: update svg io